2004-07-20 01:24  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSScroller.m (-rectForPart:): Use floor() instead of
	floorf().

2004-07-18  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Removed some commented out code.

2004-07-14  Adam Fedor  <fedor@gnu.org>

	* Documentation/General/OpenStepCompliance.gsdoc: Update.
	* Documentation/Gui/Gui.gsdoc: Add compliance and release links
	* Source/NSSavePanel.m: Remove extraneous ';' at end of some methods
	* Source/NSTableView.m: Idem.

2004-07-15 02:28  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSBezierPath.m (point_on_curve): New function.
	(-_recalculateBounds): Rewrite. Calculate bounds analytically.

2004-07-13 02:54  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSImageRep.m (+_imageRepsWithData:): New method.
	(+imageRepsWithContentsOfURL:): Use +_imageRepsWithData:.
	(+imageRepsWithContentsOfFile:): If the filename has no extension,
	use +_imageRepsWithData: to load it.

2004-07-13 01:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (+_handleAutodisplay:, +_addAutodisplayedWindow:,
	+_removeAutodisplayedWindow:): New methods.
	Rename _handleWindowNeedsDisplay: to -_handleAutodisplay.
	([NSWindow +initialize]): Don't initialize modes.
	(-dealloc, -orderWindow:relativeTo:): Use +_addAutodisplayedWindow:
	and +_removeAutodisplayedWindow: instead of adding/removing a runloop
	performer.

2004-07-13 00:23  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSSound.m: Only declare the_server if HAVE_AUDIOFILE_H
	is defined.

2004-07-13 00:21  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSMovieView.h: Make loopMode ivar an unsigned int.

2004-07-13  Serg Stoyan <stoyan255@ukr.net>

	* Source/NSButtonCell.m:
	(_init): Set default values of _gradient_type and 
	_image_dims_when_disabled.
	(drawGradientWithFrame:inView:): Implemented. Draws gradient 
	according to the _gradient_type ivar value.